--- a/F2305/webpages/templates/webpages/base.html
+++ b/F2305/webpages/templates/webpages/base.html
@@ -27,7 +27,7 @@
 
     <!-- loading static file -->
     <link rel="stylesheet" type="text/css" href="{% static 'webpages/oasis.css' %}" />
-    Animation Library
+    <!-- Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     {% if title %}
