--- a/F2305/webpages/templates/webpages/base.html
+++ b/F2305/webpages/templates/webpages/base.html
@@ -14,6 +14,10 @@
       crossorigin="anonymous"
     />
 
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
     <style>
       /* body {
         background-image: url("https://i0.wp.com/news.northeastern.edu/wp-content/uploads/2020/03/krentzman-zoom.jpg?w=1600&ssl=1");
@@ -39,7 +43,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="navbar navbar-expand-lg navbar-dark bg-danger">
         <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
         <button
           class="navbar-toggler"
