--- a/F2305/webpages/templates/webpages/dunkin.html
+++ b/F2305/webpages/templates/webpages/dunkin.html
@@ -14,6 +14,17 @@
   <br>
 </div>
 
+<div class="container">
+  <ul class="nav bg-info">
+    <li class="nav-item">
+      <a class="nav-link link-light" href="/">HOME</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-light" href="/members">MEMBERS</a>
+    </li>
+  </ul>
+</div>
+
 <div class="container aos-init aos-animate" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50">
 
   <div class="section-header">
