--- a/F2305/webpages/templates/webpages/base.html
+++ b/F2305/webpages/templates/webpages/base.html
@@ -1,130 +1,104 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
-    <style>
-      /* body {
+  {% load bootstrap5 %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
+
+  <style>
+    /* body {
         background-image: url("https://i0.wp.com/news.northeastern.edu/wp-content/uploads/2020/03/krentzman-zoom.jpg?w=1600&ssl=1");
         background-repeat: no-repeat;
         background-size: cover;
       } */
-      body {
-        background-color: beige;
-      }
-    </style>
+    body {
+      background-color: beige;
+    }
 
-    <!-- loading static file -->
-    <link rel="stylesheet" type="text/css" href="{% static 'webpages/oasis.css' %}" />
-    <!-- Animation Library -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    .content-section {
+      background: lavender;
+      height: 1000px;
+      min-height: 100vh;
+      padding: 1em;
+    }
 
-    {% if title %}
-    <title>Dining - {{ title }}</title>
-    {% else %}
-    <title>Home</title>
-    {% endif %}
-  </head>
+    .sidebar-section {
+      height: 100%;
+    }
 
-  <body>
-    <header>
-      <div class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    .sidebar-content {
+      background: cornflowerblue;
+      padding: 1em;
+    }
+  </style>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <!-- LINK 1 -->
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'dunkin' %}">Dunkin</a>
-            </li>
-            <!-- LINK 2 -->
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'starbucks' %}">Starbucks</a>
-            </li>
-            <!-- LINK 3 -->
-            <li class="nav-item">
-              <a class="nav-link" href="#">Donde esta su madre</a>
-            </li>
-            <!-- LINK 4 -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li> -->
-          </ul>
-        </div>
+  <!-- loading static file -->
+  <link rel="stylesheet" type="text/css" href="{% static 'webpages/oasis.css' %}" />
+  <!-- Animation Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  {% if title %}
+  <title>Dining - {{ title }}</title>
+  {% else %}
+  <title>Home</title>
+  {% endif %}
+</head>
+
+<body>
+  <header>
+    <div class="navbar navbar-expand-lg navbar-dark bg-danger">
+      <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <!-- LINK 1 -->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'dunkin' %}">Dunkin</a>
+          </li>
+          <!-- LINK 2 -->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'starbucks' %}">Starbucks</a>
+          </li>
+        </ul>
+      </div>
       </nav>
-    </header>
+  </header>
 
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      {% block content %}{% endblock %}
-    </div>
+  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    {% block content %}{% endblock %}
+  </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <script 
-      src="https://unpkg.com/aos@2.3.1/dist/aos.js">
-    </script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
+  </script>
+  <script>
+    AOS.init();
+  </script>
+</body>
+
 </html>
