--- a/F2305/webpages/templates/webpages/homepage.html
+++ b/F2305/webpages/templates/webpages/homepage.html
@@ -2,5 +2,12 @@
 <main role="main" class="inner cover">
   <h1 class="starter">Northeastern University Dining Tracker</h1>
   <p class="starter">Enjoying dining on campus?</p>
+
+  <div class="container">
+    <img
+      src="https://d2cbg94ubxgsnp.cloudfront.net/Pictures/2000xAny/2/7/8/513278_shutterstock_1544594165_719610.jpg"
+      class="img-fluid">
+  </div>
 </main>
+
 {% endblock %}
